[project]
name = "cronjobz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "polylith-cli>=1.32.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"bases/cronjobz/cli" = "cronjobz/cli"
"components/cronjobz/runner" = "cronjobz/runner"
"components/cronjobz/storage_sqlite" = "cronjobz/storage_sqlite"
"components/cronjobz/shell" = "cronjobz/shell"
